--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -19,5 +19,7 @@
       "**/core.mongo*": true,
       "**/core.python*": true
    },
-   "emmet.extensionsPath": ".theia"
+"emmet.extensionsPath": ".theia",
+"python.pythonPath": "/home/gitpod/.pyenv/versions/3.8.6/bin/python",
+"editor.autoSave": "on"
 }
